app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require_tree .
 *= require_self
 */

 /* Sticky footer styles
 -------------------------------------------------- */
 html {
   position: relative;
   min-height: 100%;
 }
 body {
   /* Margin bottom by footer height */
   margin-bottom: 40px;
 }
 .footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
   height: 40px;
   background-color: #ef5350;
   color: #ffffff;
 }
.footer a {
    color: #fff;
}
.footer a:hover {
    color: #fff;
}


/* Non-Responsive */
.container {
    /* Set width to your desired site width */
    width: 1170px !important;
}

 /* Custom page CSS
 -------------------------------------------------- */
 /* Not required for template or sticky footer method. */

 .header-area {
     /*text-align: center;*/
     color: #FFFFFF;
 }
 .inner-trend {
     padding-left: 15px;
     padding-right: 15px;
     /*background-color: gray;*/
 }

 a {
     color: inherit;
     text-decoration: none;
 }

 .index-tile:hover {
     background-color: #C1C1C1;
 }

 .title{
     color: #FFFFFF;
     position: relative;
     z-index: 9;
 }

 html, body {
     background-color: #0E2D5C;
 }

 .panel {
     background-color: #eee;
     transition: background-color 0.3s;
 }
 .panel:hover {
     background-color: #fff;
 }

 hr {
     margin: 0.3em 0;
     height: 0.6px;
     background-color: #AAA;
     border: none;
 }
 .circle {
     position: absolute;
     top: -200px;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
 	border-radius: 50%;
 	width: 400px;
 	height: 400px;
 	/*background-color: #66BB6A;*/
 	z-index:-1;
 }
 .header-area {
     text-align: center;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 30px;
 	width: 350px;
 	height: 350px;
 	margin-top: -175px;
 	padding-top: 175px;
 	background-color: #65C969;
 	border-radius: 50%;
 }
 a:hover {
     text-decoration: none;
 }

 .header-area2 {
     text-align: center;
     color: white;
 }

 .panel-header h3 {
     float:left;
 }
 .panel-header small{
     float:right;
     margin-top: 27px;
     color: #777;
 }

 .panel-body.home {
     margin-top: 45px;
 }

 .thumb-up-down {
     font-size: 120%;
     opacity: 0.15;
 }
 .red {
     color: red;
 }
 .green {
     color: green;
     opacity: 0.20;
 }

 .home-red {
     color: #DE5050;
 }
 .home-green {
     color: green;
 }

